--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -692,17 +692,19 @@ We evaluate our approach in standard human-designed planning domains as well as 
 Our evaluation shows that our approach reliably computes correct plans in all domains of the experimental dataset, in both low observability problems and problems with noisy observation, outperforming approaches that rely exclusively on the domain theory.}
 }
 
-@inproceedings{Meneguzzi2021,
+@inproceedings{ijcai2021p616,
   title     = {A Survey on Goal Recognition as Planning},
-  author    = {Felipe Meneguzzi and Ramon {F. Pereira}},
+  author    = {Meneguzzi, Felipe and Fraga Pereira, Ramon},
   booktitle = {Proceedings of the Thirtieth International Joint Conference on
                Artificial Intelligence, {IJCAI-21}},
-  publisher = {International Joint Conferences on Artificial Intelligence Organization},             
-  pages     = { },
+  publisher = {International Joint Conferences on Artificial Intelligence Organization},
+  editor    = {Zhi-Hua Zhou},
+  pages     = {4524--4532},
   year      = {2021},
-  month     = { },
-  doi       = { },
-  url       = { },
+  month     = {8},
+  note      = {Survey Track},
+  doi       = {10.24963/ijcai.2021/616},
+  url       = {https://doi.org/10.24963/ijcai.2021/616},
 }
 
 @inproceedings{Santos2021,
@@ -888,26 +890,6 @@ isbn="978-3-030-88549-6",
 doi="10.1007/978-3-030-88549-6\_4"
 }
 
-@article{DBLP:journals/ecoi/YunBBCGT18,
-  author    = {Bruno Yun and
-               Pierre Bisquert and
-               Patrice Buche and
-               Madalina Croitoru and
-               Val{\'{e}}rie Guillard and
-               Rallou Thomopoulos},
-  title     = {Choice of environment-friendly food packagings through argumentation
-               systems and preferences},
-  journal   = {Ecol. Informatics},
-  volume    = {48},
-  pages     = {24--36},
-  year      = {2018},
-  url       = {https://doi.org/10.1016/j.ecoinf.2018.07.006},
-  doi       = {10.1016/j.ecoinf.2018.07.006},
-  timestamp = {Fri, 27 Mar 2020 08:33:18 +0100},
-  biburl    = {https://dblp.org/rec/journals/ecoi/YunBBCGT18.bib},
-  bibsource = {dblp computer science bibliography, https://dblp.org}
-}
-
 
 @inproceedings{DBLP:conf/mtsr/YunBBC16,
   author    = {Bruno Yun and
@@ -1050,12 +1032,6 @@ doi="10.1007/978-3-030-88549-6\_4"
 	year = {2018},
 }
 
-@inproceedings{yun_viewpoints_2018,
-	title = {Viewpoints using ranking-based argumentation semantics},
-	booktitle = {Proceedings of the 7th {International} {Conference} on {Computational} {Models} of {Argument},  {COMMA} 2018, 11th - 14th {September}, 2018, {Warsaw}, {Poland}.},
-	author = {Yun, Bruno and Vesic, Srdjan and Croitoru, Madalina and Bisquert, Pierre},
-	year = {2018},
-}
 
 @inproceedings{yun_toward_2018,
 	title = {Toward a {More} {Efficient} {Generation} of {Structured} {Argumentation} {Graphs}},
@@ -1344,7 +1320,7 @@ doi = {10.3390/robotics10020067}
 }
 
 @inproceedings{cardoso22a,
-author={Angelo Ferrando. and Rafael Cardoso.},
+author={Angelo Ferrando, and Rafael Cardoso},
 title={RVPLAN: Runtime Verification of Assumptions in Automated Planning},
 booktitle={Proceedings of the 14th International Conference on Agents and Artificial Intelligence - Volume 2: ICAART,},
 year={2022},
@@ -2113,17 +2089,6 @@ publisher =    "IFAAMAS",
   publisher =	 "{IJCAI}",
 }
 
-@Article{Bordini//:20a,
-  author =	 "Bordini, Rafael H. and El Fallah Seghrouchni, Amal
-                  and Koen Hindriks and Brian Logan and Alessandro
-                  Ricci",
-  title =	 "Agent programming in the cognitive era",
-  journal =	 "Autonomous Agents and Multi-Agent Systems",
-  year =	 2020,
-  volume =       34,
-  number =       37,
-  doi =          {https://doi.org/10.1007/s10458-020-09453-y}
-}
 
 
 @Article{Cardoso22b,
