Adding selected publications to home

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2096,6 +2096,7 @@ publisher =    "IFAAMAS",
   title =	 "Resilience, reliability, and coordination in autonomous multi-agent systems",
   journal =	 "AI Communications",
   year =	 2022,
+  selected={true},
   volume =       Pre-press,
   number =       -,
   doi =          {10.3233/AIC-220136}
