--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2097,7 +2097,7 @@ publisher =    "IFAAMAS",
   journal =	 "AI Communications",
   year =	 2022,
   selected={true},
-  volume =       Pre-press,
-  number =       -,
+  volume =       35,
+  number =       4,
   doi =          {10.3233/AIC-220136}
 }
