Adding pdf and enabling bibtex copy/paste

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2099,5 +2099,6 @@ publisher =    "IFAAMAS",
   selected={true},
   volume =       35,
   number =       4,
-  doi =          {10.3233/AIC-220136}
+  doi =          {10.3233/AIC-220136},
+  pdf = {a3-aic.pdf}
 }
